<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.crocussativus.wallpaper.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.crocussativus.wallpaper.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_featured"
        android:name="com.crocussativus.wallpaper.ui.featured.FeaturedFragment"
        android:label="@string/menu_featured"
        tools:layout="@layout/fragment_featured_image" />

    <fragment
        android:id="@+id/nav_donate"
        android:name="com.crocussativus.wallpaper.ui.donate.DonateFragment"
        android:label="@string/menu_donate"
        tools:layout="@layout/fragment_donate" />

    <fragment
        android:id="@+id/nav_infor"
        android:name="com.crocussativus.wallpaper.ui.infor.InforFragment"
        android:label="@string/menu_information"
        tools:layout="@layout/fragment_infor" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.crocussativus.wallpaper.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>