<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        app:key="your_name"
        app:defaultValue="Not set"
        app:title="@string/your_name_title"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        app:allowDividerAbove="true"
        app:key="your_email"
        app:defaultValue="Not set"
        app:title="@string/your_mail_title"
        app:useSimpleSummaryProvider="true" />
    <ListPreference
        app:defaultValue="tieng_anh"
        app:entries="@array/language_entries"
        app:entryValues="@array/language_values"
        app:key="language"
        app:title="@string/language_title"
        app:enabled="false"
        app:allowDividerAbove="true"
        app:useSimpleSummaryProvider="true" />
    <Preference
        app:allowDividerAbove="true"
        android:selectable="false"
        android:enabled="false"
        android:key="widgets_key"
        android:title="Widgets (Comingsoon)" />

    <Preference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        android:selectable="false"
        android:enabled="true"
        android:key="example_key"
        android:title="Note: Restart App To Apply Settings" />

</PreferenceScreen>
