<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorBlack"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/circle_item_menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/feedback_title"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"
                android:justificationMode="inter_word"
                android:textColor="@color/colorWhite2"
                android:text="@string/feedback_content" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="30dp"
                android:linksClickable="true"
                android:textSize="15sp"
                android:textColor="@color/colorWhite2"
                android:text="@string/feedback_note"/>

            <Button
                android:id="@+id/buttonSendEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:onClick="onClickButtonSendEmail"
                android:text="Send Email" />


        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>